<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_background"
    android:layoutDirection="ltr"
    tools:context=".GameControllers.GameActivity">

    <games.mrlaki5.backgammon.GameView.RoyalOnBoardImage
        android:id="@+id/boardImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnPause"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="@dimen/space_m"
        android:layout_marginEnd="@dimen/space_l"
        android:background="@drawable/bg_pause_icon_btn"
        android:contentDescription="@string/pause_title"
        android:elevation="16dp"
        android:padding="7dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_pause_gold"
        app:layout_constraintEnd_toEndOf="@id/boardImage"
        app:layout_constraintTop_toTopOf="@id/boardImage" />

    <Button
        android:id="@+id/btnHint"
        style="@style/RoyalButton.Gold.Small"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/control_md"
        android:layout_marginTop="@dimen/space_m"
        android:layout_marginEnd="@dimen/space_s"
        android:elevation="16dp"
        android:paddingStart="@dimen/space_m"
        android:paddingEnd="@dimen/space_m"
        android:text="@string/hint_button"
        android:textSize="@dimen/text_caption"
        app:layout_constraintEnd_toStartOf="@id/btnPause"
        app:layout_constraintTop_toTopOf="@id/boardImage" />

    <Button
        android:id="@+id/btnUndo"
        style="@style/RoyalButton.Wood"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/control_md"
        android:layout_marginTop="@dimen/space_m"
        android:layout_marginEnd="@dimen/space_s"
        android:elevation="16dp"
        android:paddingStart="@dimen/space_m"
        android:paddingEnd="@dimen/space_m"
        android:text="@string/undo_move"
        android:textSize="@dimen/text_caption"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/btnHint"
        app:layout_constraintTop_toTopOf="@id/boardImage" />

    <ImageButton
        android:id="@+id/rollDiceButton"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:background="@drawable/bg_roll_dice_amber"
        android:contentDescription="@string/roll_button_label"
        android:elevation="14dp"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_dice_roll"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/boardImage"
        app:layout_constraintEnd_toEndOf="@id/boardImage"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="@id/boardImage"
        app:layout_constraintTop_toTopOf="@id/boardImage" />

    <LinearLayout
        android:id="@+id/tutorialPanel"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_m"
        android:layout_marginBottom="@dimen/space_m"
        android:background="@drawable/bg_royal_panel"
        android:elevation="14dp"
        android:orientation="vertical"
        android:padding="@dimen/space_m"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tutorialTitle"
            style="@style/RoyalText.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_title"
            android:textColor="@color/accent_gold"
            android:textSize="@dimen/text_title" />

        <TextView
            android:id="@+id/tutorialBody"
            style="@style/RoyalText.Story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:textSize="@dimen/text_body" />

        <Button
            android:id="@+id/tutorialNextButton"
            style="@style/RoyalButton.Gold.Small"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/control_sm"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/space_s"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/tutorial_next"
            android:visibility="gone" />

    </LinearLayout>

    <include layout="@layout/turn_switch_overlay" />

</androidx.constraintlayout.widget.ConstraintLayout>
